--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/base.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </head>
 <body>
     <div class="top">
@@ -14,25 +16,36 @@
     </div>
     <div class="content">
         <div class="login-box">
-            <div class="login">
-                <a class="by-id" href="#">账号登录</a>
+            <div class="select">
+                <a class="by-id selected" href="#">账号登录</a>
                 <div class="divide"></div> 
                 <a class="by-scan" href="#">扫码登录</a>
-                <input type="text" placeholder="邮箱/手机号码/小米账号">
-                <input type="password" placeholder="密码">
-                <input class="submit" type="button" value="立即登录">
-                <a class="sign" href="#">注册小米账号</a>
-                <div class="divide-middle"></div> 
-                <a class="forget" href="#">忘记密码？</a>
-                <div class="by-other">
-                    <hr class="line"/><a class="others">其他方式登录</a><hr class="line"/>
-                </div>
             </div>
-            <div class="all-icons">
-                <a><span class="qq"></span></a>
-                <a><span class="weibo"></span></a>
-                <a><span class="pay"></span></a>
-                <a><span class="weixin"></span></a>
+            <div class="login">
+                <div class="id-content">
+                    <input type="text" placeholder="邮箱/手机号码/小米账号">
+                    <input type="password" placeholder="密码">
+                    <input class="submit" type="button" value="立即登录">
+                    <div>
+                        <a class="sign" href="#">注册小米账号</a>
+                        <div class="divide-middle"></div> 
+                        <a class="forget" href="#">忘记密码？</a>
+                    </div>
+                    <div class="by-other">
+                        <hr class="line"/><a class="others">其他方式登录</a><hr class="line"/>
+                    </div>
+                    <div class="all-icons">
+                        <a><span class="qq"></span></a>
+                        <a><span class="weibo"></span></a>
+                        <a><span class="pay"></span></a>
+                        <a><span class="weixin"></span></a>
+                    </div>
+                </div>
+                <div class="scan-content">
+                    <img src="images/scan.png">
+                    <p>使用 <span>小米商城APP</span> 扫一扫</p>
+                    <p>小米手机可打开「设置」&gt「小米帐号」扫码登录</p>
+                </div>
             </div>
         </div>
     </div>
